overflow fix?

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   margin: 0;
   padding: 0;
   border: 3px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .title {
